# big-data-exam

./: README.md  dev.ipynb  exam.ipynb  normalization_results_osebx_with_stats.csv  pyproject.toml
data/: OSEBX.OL_2014-01-01_2024-12-31.parquet  OSEBX.OL_2015-01-01_2016-12-31.parquet  OSEBX.OL_2015-01-01_2017-12-31.parquet  OSEBX.OL_2015-01-01_2022-12-31.parquet  OSEBX.OL_2015-01-01_2024-12-31.parquet  OSEBX.OL_2018-01-01_2022-12-31.parquet  OSEBX.OL_2018-01-01_2024-12-31.parquet  OSEBX.OL_2019-01-01_2024-12-31.parquet  OSEBX.OL_2020-01-01_2024-12-31.parquet  OSEBX.OL_2021-12-31_2022-12-31.parquet  ^GSPC_2015-01-01_2022-12-31.parquet  ^GSPC_2018-01-01_2022-12-31.parquet
results/: normalization_results_osebx_with_stats.csv
